@@ -1,3 +1,13 @@
+Sun Jun 8 2003 Lachlan Andrew  <lha@users.sourceforge.net>
+
+	* configure:  Hack to set --disable-bigfile for Solaris (with Sun cc)
+	  and  --disable-shared --enable-static  for Mac OS X
+
+	* test/{test_functions.in,t_htdig,t_htdig_local,t_htnet}:
+	  Only start Apache for tests which need it, and kill it after the test
+
+	* contrib/parse_doc.pl: Allow file names containing spaces (from .deb)
+
 Mon Jun 2 2003 Lachlan Andrew  <lha@users.sourceforge.net>
 
 	* db/mp_cmpr.c: Add default zlib setting to  default_cmpr_info
